CONFLUENCE-331: Confluence pages are not resolved in subwikis